--- a/qformat.css
+++ b/qformat.css
@@ -376,7 +376,7 @@ sup {
 		width: 45%;
 		padding-right: 10px;
 		white-space: nowrap;
-        content: attr(data-label);
+        content: attr(data-label)":";
 	}
 
 }
