--- a/css/qformat.css
+++ b/css/qformat.css
@@ -180,13 +180,13 @@ input[type=text], input[type=number], select, textarea, table {
 label {
     display: inline-block;
     padding-right: 5px;
-    text-align: center;
+    text-align: right;
     width: 100%;
     margin: 0.35ex 0;
 }
 
-label::after {
-    content: ':';
+.center {
+    text-align: center;
 }
 
 .col {
