Begin on refactor to add a playlist

--- a/css/eqtool.css
+++ b/css/eqtool.css
@@ -72,6 +72,14 @@ div.control {
     margin: 5px 0;
 }
 
+div.controlGroup, div.control, div.controlPanel {
+    min-height: 40px;
+}
+
+div.control button {
+    margin: 2px 0;
+}
+
 div.controlGroup {
     padding: 5px;
 }
