Improve rendering of disabled controls

--- a/css/eqtool.css
+++ b/css/eqtool.css
@@ -2,6 +2,10 @@ th, td {
     text-align: center;
 }
 
+input:disabled {
+    color: gray;
+}
+
 div.popup-bg {
     position: fixed;
     width: 100%;
