Add option to save the EQ

--- a/css/eqtool.css
+++ b/css/eqtool.css
@@ -6,6 +6,10 @@ input:disabled {
     color: gray;
 }
 
+.center * {
+    text-align: center;
+}
+
 div.popup-bg {
     position: fixed;
     width: 100%;
