--- a/css/eqtool.css
+++ b/css/eqtool.css
@@ -34,7 +34,7 @@ div.popup-content {
     max-width: 95vw;
 }
 
-div.popup-content label {
+div.popup-content label:not(.button) {
     text-align: left;
 }
 
@@ -65,7 +65,7 @@ div.popup-content div.control {
     margin: 5px 0;
 }
 
-div.controlGroup input, div.controlGroup label {
+div.controlGroup input, div.controlGroup label:not(.button) {
     text-align: left;
     width: 100%;
 }
@@ -79,7 +79,7 @@ div.control {
     margin: 5px 0;
 }
 
-div.control button {
+div.control button, div.control .button {
     margin: 2px 0;
 }
 
@@ -104,7 +104,7 @@ div.control.center {
     justify-content: center;
 }
 
-div.control.center button {
+div.control.center button, div.control.center .button {
     width: calc(100% - 10px);
     margin: 5px;
 }
@@ -153,7 +153,7 @@ div.trackControls *, div.trackControls * span {
     vertical-align: middle;
 }
 
-div.trackControls button {
+div.trackControls button, div.trackControls .button {
     margin: 1px;
 }
 
@@ -201,4 +201,56 @@ div#playlistGroup p {
 
 div#filterControls p {
     width: 100%;
+}
+
+button, .button {
+    margin: 0;
+    padding: 0;
+    border: none;
+    background: none;
+    width: auto;
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    padding: 5px 10px;
+    border: 2px solid #000;
+    border-radius: 5px;
+    color: #fff;
+    outline: none;
+    transition: background-color 0.1s ease, transform 0.1s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    -webkit-tap-highlight-color: transparent;
+    touch-action: manipulation;
+    text-align: center;
+}
+
+button:hover, .button:hover {
+    background-color: #333;
+    transform: scale(1.05);
+}
+
+button:focus, .button:focus {
+    outline: 2px solid #000;
+}
+
+button:active, .button:active {
+    background-color: #555;
+    transform: translateY(1px);
+}
+
+button:disabled, .button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+    opacity: 0.6;
+}
+
+button:focus, .button:focus {
+    outline: 3px solid #007bff;
+}
+
+label.button input[type="file"] {
+    display: none;
 }
