--- a/css/eqtool.css
+++ b/css/eqtool.css
@@ -134,7 +134,6 @@ div#mainControls {
 
 div.trackName {
     padding-left: 4px;
-    padding-top: 2px;
     text-align: left;
 }
 
@@ -143,11 +142,11 @@ div.trackControls {
     vertical-align: middle;
     display: inline-flex;
     width: 100%;
+    align-items: center;
 }
 
 div.trackControls *, div.trackControls * span {
     display: inline-block;
-    vertical-align: middle;
 }
 
 div.trackControls button, div.trackControls .button {
@@ -304,4 +303,35 @@ input[type="range"]:focus::-moz-range-thumb {
     border: 1px solid #053a5f;
     outline: 3px solid #053a5f;
     outline-offset: 0.125rem;
+}
+
+audio {
+    display: none;
+}
+
+div.audioPlayer {
+    width: 100%;
+    display: inline-flex;
+    flex-flow: row;
+    align-items: center;
+}
+
+div.audioPlayer button.audioPlayer-play {
+    width: 3rem;
+    text-align: center;
+    vertical-align: middle;
+    height: 2.5rem;
+}
+
+div.audioPlayer input.audioPlayer-seek-slider {
+    flex: 1 1 auto;
+    width: auto;
+}
+
+div.audioPlayer * {
+    margin: 2px;
+}
+
+span.time {
+    font-family: monospace;
 }
