Remove button hover animation for devices that don't support hover

--- a/css/eqtool.css
+++ b/css/eqtool.css
@@ -233,9 +233,11 @@ button, .button {
     text-align: center;
 }
 
-button:hover, .button:hover {
-    background-color: #333;
-    transform: scale(1.05);
+@media (hover: hover) {
+    button:hover, .button:hover {
+        background-color: #333;
+        transform: scale(1.05);
+    }
 }
 
 button:focus, .button:focus {
