--- a/css/eqtool.css
+++ b/css/eqtool.css
@@ -61,7 +61,7 @@ div.controlGroup.filter {
     width: auto;
 }
 
-div.controlGroup, div.popup-content div.control {
+div.controlGroup, div.popup-content div.control, div.controlPanel > div.controlPanel {
     margin: 5px;
 }
 
@@ -74,7 +74,7 @@ div.controlGroup input, div.controlGroup label:not(.button) {
     width: 100%;
 }
 
-div.controlGroup div.control {
+div.controlGroup div.control, div.controlGroup div.eq-control {
     background-color: #444;
 }
 
@@ -115,17 +115,72 @@ div.controlPanel {
     padding: 5px;
 }
 
-div#audioControls {
+/* EQ */
+
+div#eq {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
 }
 
-div#playlistGroup {
-    flex-grow: 5;
-    flex-shrink: 1;
+div#filterControls {
+    flex: 1 1 calc(40% - 10px);
+    vertical-align: top;
     min-width: 300px;
-    background: url(../img/cloud-upload-alt.svg) no-repeat center center;
-    background-size: clamp(30px, 80%, 250px) clamp(30px, 80%, 250px);
+}
+
+div#filterControls p {
+    text-align: center;
+    padding: 5px;
+}
+
+div#eqGraph {
+    flex: 1 3 calc(60% - 10px);
+    vertical-align: top;
+    min-width: 500px;
+}
+
+div.graph {
+    position: relative;
+    width: 100%;
+    height: 350px;
+}
+
+div.eq-control {
+    display: inline-block;
+    width: 25%;
+}
+
+div.eq-row div.eq-control:nth-of-type(1) {
+    width: 30%;
+}
+div.eq-row div.eq-control:nth-of-type(2) {
+    width: 25%;
+}
+div.eq-row div.eq-control:nth-of-type(3) {
+    width: 20%;
+}
+div.eq-row div.eq-control:nth-of-type(4) {
+    width: 25%;
+}
+
+div.eq-row {
+    margin: 5px 0;
+}
+
+div.eq-row div.eq-control:nth-of-type(5) {
+    text-align: right;
+    width: 100%;
+}
+div.eq-row div.eq-control:nth-of-type(5) button {
+    margin-right: 0;
+}
+
+/* Audio and app controls */
+
+div#audioControls {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 div#mainControls {
@@ -138,6 +193,16 @@ div#mainControls {
 
 div#mainControls div.control:last-child {
     flex-grow: 1;
+}
+
+/* Playlist */
+
+div#playlistGroup {
+    flex-grow: 5;
+    flex-shrink: 1;
+    min-width: 300px;
+    background: url(../img/cloud-upload-alt.svg) no-repeat center center;
+    background-size: clamp(30px, 80%, 250px) clamp(30px, 80%, 250px);
 }
 
 div.trackName {
@@ -181,20 +246,12 @@ div#playlistGroup {
     align-items: top;
 }
 
-div#filterControls {
-    justify-content: left;
-    align-items: top;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 5px;
-}
-
-div#filterControls, div#playlistGroup {
+div#playlistGroup {
     position: relative;
     min-height: 100px;
 }
 
-div#filterControls p, div#playlistGroup p {
+div#playlistGroup p {
     position: absolute;
     text-align: center;
     padding: 0 5px;
@@ -202,10 +259,6 @@ div#filterControls p, div#playlistGroup p {
 
 div#playlistGroup p {
     width: calc(100% - 10px);
-}
-
-div#filterControls p {
-    width: 100%;
 }
 
 /* Buttons */
