--- a/css/eqtool.css
+++ b/css/eqtool.css
@@ -121,12 +121,13 @@ div#eq {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    overflow-x: auto;
 }
 
 div#filterControls {
     flex: 1 1 calc(40% - 10px);
     vertical-align: top;
-    min-width: 300px;
+    min-width: 420px;
 }
 
 div#filterControls p {
@@ -146,34 +147,46 @@ div.graph {
     height: 350px;
 }
 
-div.eq-control {
-    display: inline-block;
-    width: 25%;
-}
-
-div.eq-row div.eq-control:nth-of-type(1) {
-    width: 30%;
-}
-div.eq-row div.eq-control:nth-of-type(2) {
-    width: 25%;
-}
-div.eq-row div.eq-control:nth-of-type(3) {
-    width: 20%;
-}
-div.eq-row div.eq-control:nth-of-type(4) {
-    width: 25%;
-}
-
 div.eq-row {
     margin: 5px 0;
 }
 
+div.eq-control {
+    display: inline-block;
+    width: 25%;
+    vertical-align: middle;
+}
+
+div.eq-row div.eq-control:nth-of-type(1) {
+    width: 25%;
+}
+div.eq-row div.eq-control:nth-of-type(2) {
+    width: 18%;
+}
+div.eq-row div.eq-control:nth-of-type(3) {
+    width: 19%;
+}
+div.eq-row div.eq-control:nth-of-type(4) {
+    width: 18%;
+}
 div.eq-row div.eq-control:nth-of-type(5) {
-    text-align: right;
-    width: 100%;
+    text-align: center;
+    width: 20%;
 }
 div.eq-row div.eq-control:nth-of-type(5) button {
     margin-right: 0;
+    margin-top: 2.5px;
+    margin-bottom: 2.5px;
+}
+
+div#filterControls input::-webkit-outer-spin-button,
+div#filterControls input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+div#filterControls input[type=number] {
+    -moz-appearance:textfield;
 }
 
 /* Audio and app controls */
